# file-automation

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: test_and_build.yml
file_automation/: config.py  main.py
tests/: test_config.py  test_main.py
